--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,57 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+#authotPhoto {
+  height: 70px;
+  width: 70px;
+  border-radius: 50px;
+  margin: 15px;
 }
+#nameAuthor {
+  font-size: 25px;
+  padding-top: 25px;
+  font-weight: bold;
+}
+.verified {
+  height: 20px;
+  padding-top: 30px;
+  padding-left: 10px;
+}
+.nickname,
+.date {
+  padding-top: 30px;
+  padding-left: 15px;
+  font-size: 20px;
+  color: cadetblue;
+}
+.date {
+  padding-left: 25px;
+}
+.content {
+  position: absolute;
+  margin-top: 90px;
+  padding-left: 100px;
+  font-size: 30px;
+  font-weight: bold;
+}
+#image {
+  position: absolute;
+  margin-top: 150px;
+  margin-left: 100px;
+  height: 400px;
+  width: 500;
+  border-radius: 20px;
+}
+.icons {
+  position: absolute;
+  display: flex;
+  margin-left: 200px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  margin-top: 560px;
+  font-size: 20px;
+}
+.icon {
+  color: cadetblue;
+  margin-right: 200px;
+  font-size: 15px;
 }
